# SCAPI

./: .gitignore  CMakeLists.txt  README.md  SCAPI.sln
.github/workflows/: ci.yml
SCAPI/: CopyJob.cpp  CopyLocalContent.cpp  CreateTicket.cpp  Decrypt.cpp  GetLocationInfoFromIP.cpp  HTTPRequest.hpp  Matchmaking.cpp  QueryContent.cpp  SCAPI.vcxproj  SCAPI.vcxproj.filters  SendAdminMessage.cpp  SendEmail.cpp  SendInvite.cpp  bla.txt  command.cpp  command.hpp  current.txt  data_json.txt  example.txt  main.cpp  meta.txt  nonencoded-now.txt  nonencoded-shouldbe.txt  nonencoded-v1-now.txt  nonencoded-v2-now.txt  nonencoded-v2-shouldbe.txt  ros_crypt.hpp  shouldbe.txt
scripts/: FindBotan.cmake  json.cmake
src/: AccountInfo.hpp  command.cpp  command.hpp  common.hpp  main.cpp  ros_crypt.cpp  ros_crypt.hpp
src/commands/prod.ros.rockstargames.com/: Decrypt.cpp
src/commands/prod.ros.rockstargames.com/Achievements/: AwardAchievement.cpp  AwardAchievementProgress.cpp  GetAchievementDefinitions.cpp  GetPlayerAchievements.cpp
src/commands/prod.ros.rockstargames.com/Auth/: CreateP2PCertificate.cpp  CreateScAuthToken.cpp  CreateTicket.cpp
src/commands/prod.ros.rockstargames.com/Clans/: Disband.cpp  GetAll.cpp  GetDesc.cpp  GetDescs.cpp  GetFeudStats.cpp  GetInvites.cpp  GetLeadersForClans.cpp  GetMembers.cpp  GetMembersTitleOnly.cpp  GetMetadataForClan.cpp  GetMine.cpp  GetPrimaryClans.cpp  GetRanks.cpp  GetSentInvites.cpp  GetTopRivals.cpp  GetWallMessages.cpp  JoinClan.cpp  Kick.cpp  Leave.cpp  MemberSetRankByRankOrder.cpp  MemberUpdateRankId.cpp  RankCreate.cpp  (+3 more)
(+42 files in other folders)
